--- a/aboutus.html
+++ b/aboutus.html
@@ -121,7 +121,7 @@
                 <a href="landing.html#courses" class="nav-link-hover text-white hover:text-black transition duration-200 px-4 py-2">Courses</a>
                 
                 <a href="landing.html#testimonial" class="nav-link-hover text-white hover:text-black transition duration-200 px-4 py-2">Testimonials</a>
-                <a href="landing.html#career_opportunities" class="nav-link-hover text-white hover:text-black transition duration-200 px-4 py-2">Jobs</a>
+                <a href="job.html" class="nav-link-hover text-white hover:text-black transition duration-200 px-4 py-2">Jobs</a>
                 <a href="" class="nav-link-hover text-white hover:text-black transition duration-200 px-4 py-2">Contact</a>
             </nav>
             
