--- a/job.html
+++ b/job.html
@@ -21,8 +21,8 @@
             <nav class="nav-links" id="mobile-menu">
                 <ul>
                     <li><a href="#" class="active">Services</a></li>
-                    <li><a href="##courses">Courses</a></li>
-                    <li><a href="#recent-jobs">Jobs</a></li>
+                    <li><a href="landing.html#courses">Courses</a></li>
+                    <li><a href="#category-section">Jobs</a></li>
                     <li><a href="landing.html#final_courses">Projects</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="aboutus.html">About Us</a></li>
@@ -107,7 +107,7 @@
 
     </div>
 </section>
-<section class="category-section">
+<section class="category-section" id="category-section">
 
     <div class="category-heading">
         <button class="category-btn">JOB CATEGORY</button>
@@ -183,6 +183,8 @@ This helps us show you the most relevant opportunities and make your experience 
 
         <!-- File Name Display -->
         <p id="fileName" class="file-name"></p>
+        <p id="uploadSuccess" class="success-msg" style="display:none;"></p>
+
 
     </div>
 </section>
