--- a/landing.html
+++ b/landing.html
@@ -47,7 +47,7 @@
         <ul class="navbar-nav ms-auto me-3">
           <li class="nav-item"><a class="nav-link" href="#service">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#courses">Courses</a></li>
-          <li class="nav-item"><a class="nav-link" href="#career_opportunities">Jobs</a></li>
+          <li class="nav-item"><a class="nav-link" href="job.html">Jobs</a></li>
           <li class="nav-item"><a class="nav-link" href="#final_courses">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
           <li class="nav-item"><a class="nav-link" href="aboutus.html">About Us</a></li>
