new files added

--- a/job.html
+++ b/job.html
@@ -116,48 +116,38 @@
         <p>Select the category that best matches your skills, interests, or career path.
 This helps us show you the most relevant opportunities and make your experience faster and more personalized.</p>
     </div>
+<div class="category-container">
 
-    <div class="category-container">
+    <a href="technical.html" class="category-box">
+        <div class="cat-icon"><i class="fas fa-cog"></i></div>
+        <h4>Technical Support</h4>
+    </a>
 
-        <div class="category-box">
-            <div class="cat-icon"><i class="fas fa-cog"></i></div>
-            <h4>Technical Support</h4>
-        </div>
+    <a href="business.html" class="category-box">
+        <div class="cat-icon"><i class="fas fa-layer-group"></i></div>
+        <h4>Business Development</h4>
+    </a>
 
-        <div class="category-box">
-            <div class="cat-icon"><i class="fas fa-layer-group"></i></div>
-            <h4>Business Development</h4>
-        </div>
 
-        <div class="category-box">
-            <div class="cat-icon"><i class="fas fa-home"></i></div>
-            <h4>Real Estate Business</h4>
-        </div>
 
-        <div class="category-box">
-            <div class="cat-icon"><i class="fas fa-search"></i></div>
-            <h4>Share Market Analysis</h4>
-        </div>
+    <a href="share.html" class="category-box">
+        <div class="cat-icon"><i class="fas fa-search"></i></div>
+        <h4>Share Market Analysis</h4>
+    </a>
 
-        <div class="category-box">
-            <div class="cat-icon"><i class="fas fa-university"></i></div>
-            <h4>Finance & Banking Service</h4>
-        </div>
+    <a href="finance.html" class="category-box">
+        <div class="cat-icon"><i class="fas fa-university"></i></div>
+        <h4>Finance & Banking Service</h4>
+    </a>
 
-        <div class="category-box">
-            <div class="cat-icon"><i class="fas fa-network-wired"></i></div>
-            <h4>IT & Networking Services</h4>
-        </div>
+    <a href="it.html" class="category-box">
+        <div class="cat-icon"><i class="fas fa-network-wired"></i></div>
+        <h4>IT & Networking Services</h4>
+    </a>
 
-        <div class="category-box">
-            <div class="cat-icon"><i class="fas fa-store"></i></div>
-            <h4>Restaurant Services</h4>
-        </div>
 
-        <div class="category-box">
-            <div class="cat-icon"><i class="fas fa-fire-extinguisher"></i></div>
-            <h4>Defence & Fire Service</h4>
-        </div>
+
+</div>
 
     </div>
 
@@ -204,7 +194,8 @@ This helps us show you the most relevant opportunities and make your experience 
                     <h3>Software Developer</h3>
 
                     <div class="job-buttons">
-                        <button class="apply-btn">Apply</button>
+                        <button class="apply-btn" onclick="window.location.href='jobapply.html'">Apply
+               </button>
                         <button class="type-btn full-time">Full Time</button>
                     </div>
                 </div>
@@ -232,7 +223,8 @@ This helps us show you the most relevant opportunities and make your experience 
                     <h3>Operation Specialist</h3>
 
                     <div class="job-buttons">
-                        <button class="apply-btn">Apply</button>
+                       <button class="apply-btn" onclick="window.location.href='jobapply.html'">Apply
+               </button>
                         <button class="type-btn part-time">Full Time</button>
                     </div>
                 </div>
@@ -260,7 +252,8 @@ This helps us show you the most relevant opportunities and make your experience 
                     <h3>Customer Relationship Executive</h3>
 
                     <div class="job-buttons">
-                        <button class="apply-btn">Apply</button>
+                       <button class="apply-btn" onclick="window.location.href='jobapply.html'">Apply
+               </button>
                         <button class="type-btn intern">Full Time</button>
                     </div>
                 </div>
@@ -287,7 +280,9 @@ This helps us show you the most relevant opportunities and make your experience 
                     <h3>HRBP</h3>
 
                     <div class="job-buttons">
-                        <button class="apply-btn">Apply</button>
+                        <!-- <button class="apply-btn">Apply</button> -->
+                         <button class="apply-btn" onclick="window.location.href='jobapply.html'">Apply
+               </button>
                         <button class="type-btn full-time">Full Time</button>
                     </div>
                 </div>
@@ -305,6 +300,7 @@ This helps us show you the most relevant opportunities and make your experience 
         </div>
 
     </div>
+<a href="#" class="view-all-btn">View All Jobs</a>
 
 </section>
 <footer class="footer">
