--- a/job.html
+++ b/job.html
@@ -300,7 +300,7 @@ This helps us show you the most relevant opportunities and make your experience 
         </div>
 
     </div>
-<a href="#" class="view-all-btn">View All Jobs</a>
+<a href="it.html" class="view-all-btn">View All Jobs</a>
 
 </section>
 <footer class="footer">
