--- a/landing.html
+++ b/landing.html
@@ -982,20 +982,20 @@
         <div class="footer-column">
             <h3>Company</h3>
             <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Careers</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="job.html">Careers</a></li>
                 <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
 
         <div class="footer-column">
             <h3>Services</h3>
             <ul>
-                <li><a href="#">IT Services</a></li>
-                <li><a href="#">Job Placements</a></li>
-                <li><a href="#">IT & Non-IT Courses</a></li>
-                <li><a href="#">Internship and Placement</a></li>
+                <li><a href="it.html">IT Services</a></li>
+                <li><a href="job.html">Job Placements</a></li>
+                <li><a href="it.html">IT & Non-IT Courses</a></li>
+                <li><a href="#course">Internship and Placement</a></li>
                 <li><a href="#">HR Consultancy</a></li>
                 <li><a href="#">Career Guidance & Consulting</a></li>
               
@@ -1005,10 +1005,10 @@
         <div class="footer-column">
             <h3>Resources</h3>
             <ul>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="#">Job Board</a></li>
+                <li><a href="#course">Courses</a></li>
+                <li><a href="job.html">Projects</a></li>
+                <li><a href="#testimonial">Testimonials</a></li>
+                <li><a href="job.html">Job Board</a></li>
             </ul>
         </div>
     </div>
