--- a/job.html
+++ b/job.html
@@ -59,6 +59,8 @@
                 </div>
 
                 <div class="popular-keywords">
+                    <div id="searchResults" class="jobs-container" style="margin-top:40px; display:none;"></div>
+
                     Popular Keywords:
                     <span class="keyword">Administrative</span>
                     <span class="keyword">Android</span>
@@ -315,7 +317,7 @@ This helps us show you the most relevant opportunities and make your experience 
 
             <p>Start building your creative website with our awesome template.</p>
 
-            <p><strong>Address:</strong>Amravati , Maharahstra</p>
+            <p><strong>Address:</strong>Amravati,Maharahstra</p>
             <p><strong>Email:</strong> admin@vorexo.com</p>
             <p><strong>Call:</strong>7775843729</p>
 
