--- a/landing.html
+++ b/landing.html
@@ -52,7 +52,8 @@
           <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
           <li class="nav-item"><a class="nav-link" href="aboutus.html">About Us</a></li>
         </ul>
-        <button class="btn btn-primary px-4">Get Started</button>
+        <a href="#career_opportunities" class="btn btn-primary px-4">Get Started</a>
+
       </div>
     </div>
   </nav>
@@ -167,7 +168,7 @@
       </p>
       <div class="mt-4">
         <a href="#service" class="btn btn-primary btn-lg me-2">Explore Services <i class="fa fa-arrow-right"></i></a>
-        <a href="#courses" class="btn btn-dark btn-lg">Get Started Today</a>
+        <a href="#career_opportunities" class="btn btn-dark btn-lg">Get Started Today</a>
       </div>
 
        <!-- Stats Section -->
