--- a/landing.html
+++ b/landing.html
@@ -46,7 +46,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto me-3">
           <li class="nav-item"><a class="nav-link" href="#service">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Courses</a></li>
+          <li class="nav-item"><a class="nav-link" href="course.html">Courses</a></li>
           <li class="nav-item"><a class="nav-link" href="job.html">Jobs</a></li>
           <li class="nav-item"><a class="nav-link" href="#final_courses">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
