--- a/aboutus.html
+++ b/aboutus.html
@@ -301,12 +301,20 @@ training programs in both IT and Non-IT fields."</p>
                 <p class="text-xl text-gray-600 mb-12">The dedicated team making the magic happen.</p>
 
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
-                    <div class="team-card bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 animate-fade-in-up delay-1">
-                        <img src="https://placehold.co/300x300/f97316/ffffff?text=A.J." alt="Team Member Anthony" class="team-img rounded-full mx-auto mb-4 border-4 border-accent-orange">
-                        <h3 class="text-xl font-bold text-primary-dark">Akshay Pardhi </h3>
-                        <p class="text-accent-orange font-medium">Founder & CEO</p>
-                        <p class="text-sm text-gray-500 mt-2">Visionary leadership driving company excellence.</p>
-                    </div>
+                   <div class="team-card bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 animate-fade-in-up delay-1">
+    <img 
+        src="PIC/profile4.jpg" 
+        alt="Team Member Anthony" 
+        class="w-60 h-60 object-cover rounded-full mx-auto mb-4 border-4 border-accent-orange"
+    >
+    
+    <h3 class="text-xl font-bold text-primary-dark">Akshay Pardhi</h3>
+    <p class="text-accent-orange font-medium">Founder & CEO</p>
+    <p class="text-sm text-gray-500 mt-2">
+        Visionary leadership driving company excellence.
+    </p>
+</div>
+
 
                     <div class="team-card bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 animate-fade-in-up delay-2">
                         <img src="PIC/mukhtar khan.jpg" alt="Team Member Chloe" class="team-img rounded-full mx-auto mb-4 border-4 border-accent-teal">
